exports[`Toolbar should render 1`] = `
<div
  className="navbar navbar-default"
  role="toolbar">
  <div
    className="container-fluid">
    <ul
      className="nav navbar-nav"
      role={null}>
      <label
        active={undefined}
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-text"
        htmlFor="tc-list-toolbar-display-mode"
        onSelect={null}>
        Display:
      </label>
      <li
        className="dropdown"
        style={undefined}>
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle"
          href=""
          id="tc-list-toolbar-display-mode"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button">
          <i
            aria-hidden="true"
            className="fa fa-bars"
            title={null} />
           
          <span
            className="caret" />
        </a>
        <ul
          aria-labelledby="tc-list-toolbar-display-mode"
          className="dropdown-menu"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              <i
                aria-hidden="true"
                className="fa fa-bars"
                title={null} />
               
              Table
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              <i
                aria-hidden="true"
                className="fa fa-list-alt"
                title={null} />
               
              Expanded
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              <i
                aria-hidden="true"
                className="fa fa-th-large"
                title={null} />
               
              Tile
            </a>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      className="nav navbar-nav"
      role={null}>
      <label
        active={undefined}
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-text"
        htmlFor="tc-list-toolbar-sort-by"
        onSelect={null}>
        Sort by:
      </label>
      <li
        className="dropdown"
        style={undefined}>
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle"
          href=""
          id="tc-list-toolbar-sort-by"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button">
          Name
           
          <span
            className="caret" />
        </a>
        <ul
          aria-labelledby="tc-list-toolbar-sort-by"
          className="dropdown-menu"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Name
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Name
            </a>
          </li>
        </ul>
      </li>
      <button
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-btn btn btn-link"
        disabled={false}
        onClick={[Function]}
        onSelect={null}
        role="button"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-sort-desc"
          title={null} />
        DESCENDING
      </button>
    </ul>
    <form
      className="navbar-form navbar-right"
      onSubmit={[Function]}
      role="search">
      <div
        className="form-group">
        <div
          className="input-group">
          <input
            aria-label="Filter"
            className="form-control"
            onChange={[Function]}
            placeholder="Filter"
            type="search" />
        </div>
        <button
          className="btn btn-link"
          disabled={false}
          title="Filter"
          type="submit">
          <i
            aria-hidden="true"
            className="fa fa-search" />
          <span
            className="sr-only">
            Filter
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Toolbar should render add btn 1`] = `
<div
  className="navbar navbar-default"
  role="toolbar">
  <div
    className="container-fluid">
    <ul
      className="nav navbar-nav"
      role={null}>
      <button
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-btn btn btn-success"
        disabled={false}
        onClick={[Function]}
        onSelect={null}
        role={null}
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-plus"
          title={null} />
        <span>
          Add
        </span>
      </button>
      <div
        active={undefined}
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-btn btn-group"
        onSelect={null} />
    </ul>
    <ul
      className="nav navbar-nav"
      role={null}>
      <label
        active={undefined}
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-text"
        htmlFor="tc-list-toolbar-display-mode"
        onSelect={null}>
        Display:
      </label>
      <li
        className="dropdown"
        style={undefined}>
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle"
          href=""
          id="tc-list-toolbar-display-mode"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button">
          <i
            aria-hidden="true"
            className="fa fa-bars"
            title={null} />
           
          <span
            className="caret" />
        </a>
        <ul
          aria-labelledby="tc-list-toolbar-display-mode"
          className="dropdown-menu"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              <i
                aria-hidden="true"
                className="fa fa-bars"
                title={null} />
               
              Table
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              <i
                aria-hidden="true"
                className="fa fa-list-alt"
                title={null} />
               
              Expanded
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              <i
                aria-hidden="true"
                className="fa fa-th-large"
                title={null} />
               
              Tile
            </a>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      className="nav navbar-nav"
      role={null}>
      <label
        active={undefined}
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-text"
        htmlFor="tc-list-toolbar-sort-by"
        onSelect={null}>
        Sort by:
      </label>
      <li
        className="dropdown"
        style={undefined}>
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle"
          href=""
          id="tc-list-toolbar-sort-by"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button">
          Name
           
          <span
            className="caret" />
        </a>
        <ul
          aria-labelledby="tc-list-toolbar-sort-by"
          className="dropdown-menu"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Name
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Name
            </a>
          </li>
        </ul>
      </li>
      <button
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-btn btn btn-link"
        disabled={false}
        onClick={[Function]}
        onSelect={null}
        role="button"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-sort-desc"
          title={null} />
        DESCENDING
      </button>
    </ul>
    <form
      className="navbar-form navbar-right"
      onSubmit={[Function]}
      role="search">
      <div
        className="form-group">
        <div
          className="input-group">
          <input
            aria-label="Filter"
            className="form-control"
            onChange={[Function]}
            placeholder="Filter"
            type="search" />
        </div>
        <button
          className="btn btn-link"
          disabled={false}
          title="Filter"
          type="submit">
          <i
            aria-hidden="true"
            className="fa fa-search" />
          <span
            className="sr-only">
            Filter
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Toolbar should render listActions 1`] = `
<div
  className="navbar navbar-default"
  role="toolbar">
  <div
    className="container-fluid">
    <ul
      className="nav navbar-nav"
      role={null}>
      <div
        active={undefined}
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-btn btn-group"
        onSelect={null}>
        <div
          className="dropdown btn-group btn-group-link">
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-link"
            disabled={false}
            id="tc-list-toolbar-add-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button">
             
            <span
              className="caret" />
          </button>
          <ul
            aria-labelledby="tc-list-toolbar-add-dropdown"
            className="dropdown-menu"
            role="menu">
            <li
              className=""
              role="presentation"
              style={undefined}>
              <a
                href=""
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1">
                <i
                  aria-hidden="true"
                  className="fa fa-trash-o"
                  title={null} />
                Delete selection
              </a>
            </li>
          </ul>
        </div>
      </div>
    </ul>
    <ul
      className="nav navbar-nav"
      role={null}>
      <label
        active={undefined}
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-text"
        htmlFor="tc-list-toolbar-display-mode"
        onSelect={null}>
        Display:
      </label>
      <li
        className="dropdown"
        style={undefined}>
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle"
          href=""
          id="tc-list-toolbar-display-mode"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button">
          <i
            aria-hidden="true"
            className="fa fa-bars"
            title={null} />
           
          <span
            className="caret" />
        </a>
        <ul
          aria-labelledby="tc-list-toolbar-display-mode"
          className="dropdown-menu"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              <i
                aria-hidden="true"
                className="fa fa-bars"
                title={null} />
               
              Table
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              <i
                aria-hidden="true"
                className="fa fa-list-alt"
                title={null} />
               
              Expanded
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              <i
                aria-hidden="true"
                className="fa fa-th-large"
                title={null} />
               
              Tile
            </a>
          </li>
        </ul>
      </li>
    </ul>
    <ul
      className="nav navbar-nav"
      role={null}>
      <label
        active={undefined}
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-text"
        htmlFor="tc-list-toolbar-sort-by"
        onSelect={null}>
        Sort by:
      </label>
      <li
        className="dropdown"
        style={undefined}>
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle"
          href=""
          id="tc-list-toolbar-sort-by"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button">
          Name
           
          <span
            className="caret" />
        </a>
        <ul
          aria-labelledby="tc-list-toolbar-sort-by"
          className="dropdown-menu"
          role="menu">
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Name
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}>
            <a
              href=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1">
              Name
            </a>
          </li>
        </ul>
      </li>
      <button
        activeHref={undefined}
        activeKey={undefined}
        className="navbar-btn btn btn-link"
        disabled={false}
        onClick={[Function]}
        onSelect={null}
        role="button"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-sort-desc"
          title={null} />
        DESCENDING
      </button>
    </ul>
    <form
      className="navbar-form navbar-right"
      onSubmit={[Function]}
      role="search">
      <div
        className="form-group">
        <div
          className="input-group">
          <input
            aria-label="Filter"
            className="form-control"
            onChange={[Function]}
            placeholder="Filter"
            type="search" />
        </div>
        <button
          className="btn btn-link"
          disabled={false}
          title="Filter"
          type="submit">
          <i
            aria-hidden="true"
            className="fa fa-search" />
          <span
            className="sr-only">
            Filter
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
